# api/src/routers/report.py
@@ -1,4 +1,5 @@
 import datetime
+from typing import Optional
 
 from fastapi import APIRouter, Depends, Form, Path, Request
 from sqlalchemy.ext.asyncio import AsyncSession
@@ -10,26 +11,46 @@ from crud.user import get_by_pk as get_user_by_pk
 from database.db import get_db
 from dependencies import CsrfProtect, get_lineuser_by_token, templates
 from schemas.report import AnswerBase, ImagePair
-from services.s3 import upload_file
-from setting import STAGE_NAME, logger
+from services.s3 import S3
+from setting import is_local, logger
 
 logger.name = __name__
 
 router = APIRouter()
 
 
-@router.get("/{form_id}")
+@router.get("/")
+async def get_report_init(
+    request: Request,
+):
+    context = {
+        "request": request,
+        "is_local": is_local,
+        "liff_id": "2004221000-1rEmRmzE"
+    }
+    response = templates.TemplateResponse(
+        "report_base.html",
+        context
+    )
+    return response
+
+@router.get("/{form_id}/")
 async def get_report_form(
     request: Request,
     form_id: int = Path(title="フォームのID"),
     db: AsyncSession = Depends(get_db),
     csrf_protect: CsrfProtect = Depends()
 ):
+    sec_fetch_dest: Optional[str] = request.headers.get("Sec-Fetch-Dest")
+
+    if sec_fetch_dest == "image":
+        # 画像リソースの取得リクエストの場合
+        return {}
     csrf_token, signed_token = csrf_protect.generate_csrf_tokens()
     form = await get_by_pk(db=db, form_id=form_id)
     context = {
         "request": request,
-        "STAGE_NAME": STAGE_NAME,
+        "is_local": is_local,
         "csrf_token": csrf_token,
         "form": form,
         "liff_id": "2004221000-1rEmRmzE"
@@ -41,15 +62,15 @@ async def get_report_form(
     csrf_protect.set_csrf_cookie(signed_token, response)
     return response
 
-@router.post("/{form_id}")
+@router.post("/{form_id}/")
 async def create_report_form(
     request: Request,
     answerBase: AnswerBase,
     form_id: int = Path(..., title="フォームのID"),
     db: AsyncSession = Depends(get_db),
-    # csrf_protect: CsrfProtect = Depends()
+    csrf_protect: CsrfProtect = Depends()
 ):
-    # await csrf_protect.validate_csrf(request)
+    await csrf_protect.validate_csrf(request)
     user, _ = await get_lineuser_by_token(db=db, token=answerBase.lineToken, create=True)
 
     answer = await create_answer(db=db, answerBase=answerBase, user=user, form_id=form_id)
@@ -58,6 +79,7 @@ async def create_report_form(
     # file_url = "https://%s.s3-%s.amazonaws.com/%s" % (s3_bucket, region_name, s3_dir+"/"+file.filename)
 
     return {"success": True, "answerId": answer.id}
+
 
 @router.post("/{form_id}/answer/{answer_id}/order/{stub_id}")
 async def create_report_img(
@@ -68,20 +90,20 @@ async def create_report_img(
     stub_id: int = Path(title="回答のID"),
     lineToken: str = Form(..., title="lineのユーザートークン"),
     db: AsyncSession = Depends(get_db),
-    # csrf_protect: CsrfProtect = Depends()
+    csrf_protect: CsrfProtect = Depends()
 ):
-    # await csrf_protect.validate_csrf(request)
+    await csrf_protect.validate_csrf(request)
     user, _ = await get_lineuser_by_token(db=db, token=lineToken, create=True)
     t_delta = datetime.timedelta(hours=9)
     JST = datetime.timezone(t_delta, 'JST')
     now = datetime.datetime.now(JST)
     d = now.strftime('%Y%m%d%H%M%S')
-
-    before_image_key = upload_file(
+    s3 = S3()
+    before_image_key = s3.upload_file(
         f"img/{form_id}/{stub_id}/{d}-be.{image_pair.afterImage.filename.split('.')[-1]}",
         image_pair.beforeImage.file
     )
-    after_image_key = upload_file(
+    after_image_key = s3.upload_file(
         f"img/{form_id}/{stub_id}/{d}-af.{image_pair.afterImage.filename.split('.')[-1]}",
         image_pair.afterImage.file
     )
